# voyageai-rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs
