[package]
name = "voyageai"
version = "0.0.1"
edition = "2024"
authors = ["mert-kurttutan"]
description = "Unofficial Voyage AI SDK for Rust"
readme = "./README.md"
license = "MIT"
keywords = ["ai", "sdk"]
repository = "https://github.com/mert-kurttutan/voyageai-rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde_json = "1.0.140"